# Portfolio

./: ecommerce_data_cleaned.xlsx  pyproject.toml
ecommerce_sales_pipeline/: credentials.json  ecommerce_data_cleaned.csv
ecommerce_sales_pipeline/python_pipeline_code/: ecommerce_pipeline.py
final_csv/: mental_health_by_gender_ageband.csv  mental_health_summary_by_gender.csv
mental_health_pipeline/: pyproject.toml
python_code/: mental_health_pipeline.py
python_pipeline_code/: ecommerce_pipeline.py
