[project]
name = "ecommerce-sales-pipeline"
version = "0.1.0"
description = ""
authors = [
    {name = "ambrecazaux",email = "ambre.charlotte.cazaux@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "ecommerce_sales_pipeline", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
